pkgs/clcry/src/snapshots/clcry__frame__tests__snapshots_frame_spacing.snap
---
source: pkgs/clcry/src/frame.rs
expression: render(layout)
---
Margin
+-----------+
|           |
|           |
|  +-----+  |
|  |hello|  |
|  +-----+  |
|           |
|           |
+-----------+
Padding
+-----------+
|+---------+|
||         ||
||         ||
||  hello  ||
||         ||
||         ||
|+---------+|
+-----------+
Border
+-------+
|+-----+|
||hello||
|+-----+|
+-------+
All
+-----------+
|           |
| +-------+ |
| |       | |
| | hello | |
| |       | |
| +-------+ |
|           |
+-----------+
